fields.syslogtag no longer exists and is replaced by fields.programname and
message.Pid (issue #677).

* Removed no-longer-used 'decoder_poolsize' global config setting.

Bug Handling
------------

* use FindProcess instead of syscall.Kill to make the 'pid_file' configuration setting work on Windows (issue #807)

* Fix the SandboxFilter ReportMsg panic on termination/shutdown (issue #816)

Features
--------

* Turned the MySQL slow query log examples into a deployed decoder and filter.

* Added an Nginx error log decoder (issue #785)

* Added the ability to preserve the webserver log line in message payload
  (issue #784)

* Added the optional 'pid_file' configuration setting (issue #777).

* Add anomaly, alert, annotation modules (issue #677)

* Added 'sample_denominator' global config setting to allow tweaking the
  sample interval when computing timing of certain operations, replacing prior
  hard-coded DURATION_SAMPLE_DENOMINATOR constant (issue #625).

* Added an Apache access log decoder based on the Apache 'LogFormat'
  configuration directive.

* Added BufferedOutput. Extracts the queuing functionality out 
  of TcpOutput.go into a general purpose lib for use in any 
  output module. Callers get messages buffered to disk while 
  another goroutine consumes and forwards data. Any errors
  encountered can cause the sending goroutine to backoff and
  resend data.

* Added http_timeout to elasticsearch output to prevent slow or stale connections 
  from holding up the flow. (issue #769)

* Add query parameters to the Message as Fields in the HttpListenInput

* Add QueueTTL option to AMQPInput to allow specifying message expiration.

0.5.2 (2014-MM-DD)
==================

Bug Handling
------------

* Fix the FileOutput panic when HUP'ed.  Modified the CheckWritePermission
  utility function to use a unique filename for each check. (issue #808)

* Terminated plugins are now removed from the SandboxManager quota (issue #774).
